--- a/mac/com.googlecode.iterm2.plist
+++ b/mac/com.googlecode.iterm2.plist
@@ -9401,7 +9401,7 @@
 	<key>NSScrollAnimationEnabled</key>
 	<false/>
 	<key>NSWindow Frame Preferences</key>
-	<string>378 165 924 485 0 0 1280 777 </string>
+	<string>1636 68 924 485 1280 -224 1280 1001 </string>
 	<key>NSWindow Frame SUStatusFrame</key>
 	<string>448 499 384 129 0 0 1280 777 </string>
 	<key>NSWindow Frame iTerm Window 0</key>
@@ -9433,56 +9433,56 @@
 			<key>Ansi 1 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.47843137383460999</real>
+				<real>0.64313727617263794</real>
 				<key>Green Component</key>
-				<real>0.46666666865348816</real>
+				<real>0.61568629741668701</real>
 				<key>Red Component</key>
-				<real>0.94901961088180542</real>
+				<real>1</real>
 			</dict>
 			<key>Ansi 10 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.60000002384185791</real>
+				<real>0.66274511814117432</real>
 				<key>Green Component</key>
-				<real>0.80000001192092896</real>
+				<real>0.94509804248809814</real>
 				<key>Red Component</key>
-				<real>0.60000002384185791</real>
+				<real>0.81960785388946533</real>
 			</dict>
 			<key>Ansi 11 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.40000000596046448</real>
+				<real>0.67843139171600342</real>
 				<key>Green Component</key>
-				<real>0.80000001192092896</real>
+				<real>0.93333333730697632</real>
 				<key>Red Component</key>
 				<real>1</real>
 			</dict>
 			<key>Ansi 12 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.80000001192092896</real>
+				<real>1</real>
 				<key>Green Component</key>
-				<real>0.60000002384185791</real>
+				<real>0.85490196943283081</real>
 				<key>Red Component</key>
-				<real>0.40000000596046448</real>
+				<real>0.73333334922790527</real>
 			</dict>
 			<key>Ansi 13 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.80000001192092896</real>
+				<real>1</real>
 				<key>Green Component</key>
-				<real>0.60000002384185791</real>
+				<real>0.73333334922790527</real>
 				<key>Red Component</key>
-				<real>0.80000001192092896</real>
+				<real>0.92156863212585449</real>
 			</dict>
 			<key>Ansi 14 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.80000001192092896</real>
+				<real>1</real>
 				<key>Green Component</key>
-				<real>0.80000001192092896</real>
+				<real>1</real>
 				<key>Red Component</key>
-				<real>0.40000000596046448</real>
+				<real>0.60000002384185791</real>
 			</dict>
 			<key>Ansi 15 Color</key>
 			<dict>
@@ -9496,47 +9496,47 @@
 			<key>Ansi 2 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.60000002384185791</real>
+				<real>0.66274511814117432</real>
 				<key>Green Component</key>
-				<real>0.80000001192092896</real>
+				<real>0.94509804248809814</real>
 				<key>Red Component</key>
-				<real>0.60000002384185791</real>
+				<real>0.81960785388946533</real>
 			</dict>
 			<key>Ansi 3 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.40000000596046448</real>
+				<real>0.67843139171600342</real>
 				<key>Green Component</key>
-				<real>0.80000001192092896</real>
+				<real>0.93333333730697632</real>
 				<key>Red Component</key>
 				<real>1</real>
 			</dict>
 			<key>Ansi 4 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.80000001192092896</real>
+				<real>1</real>
 				<key>Green Component</key>
-				<real>0.60000002384185791</real>
+				<real>0.85490196943283081</real>
 				<key>Red Component</key>
-				<real>0.40000000596046448</real>
+				<real>0.73333334922790527</real>
 			</dict>
 			<key>Ansi 5 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.80000001192092896</real>
+				<real>1</real>
 				<key>Green Component</key>
-				<real>0.60000002384185791</real>
+				<real>0.73333334922790527</real>
 				<key>Red Component</key>
-				<real>0.80000001192092896</real>
+				<real>0.92156863212585449</real>
 			</dict>
 			<key>Ansi 6 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.80000001192092896</real>
+				<real>1</real>
 				<key>Green Component</key>
-				<real>0.80000001192092896</real>
+				<real>1</real>
 				<key>Red Component</key>
-				<real>0.40000000596046448</real>
+				<real>0.60000002384185791</real>
 			</dict>
 			<key>Ansi 7 Color</key>
 			<dict>
@@ -9559,11 +9559,11 @@
 			<key>Ansi 9 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.47843137383460999</real>
+				<real>0.64313727617263794</real>
 				<key>Green Component</key>
-				<real>0.46666666865348816</real>
+				<real>0.61568629741668701</real>
 				<key>Red Component</key>
-				<real>0.94901961088180542</real>
+				<real>1</real>
 			</dict>
 			<key>Automatically Log</key>
 			<false/>
@@ -9572,11 +9572,11 @@
 			<key>Background Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.17647059261798859</real>
+				<real>0.31764706969261169</real>
 				<key>Green Component</key>
-				<real>0.17647059261798859</real>
+				<real>0.14117647707462311</real>
 				<key>Red Component</key>
-				<real>0.17647059261798859</real>
+				<real>0.0</real>
 			</dict>
 			<key>Background Image Is Tiled</key>
 			<false/>
@@ -9595,11 +9595,11 @@
 			<key>Bold Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.80000001192092896</real>
+				<real>0.99999129772186279</real>
 				<key>Green Component</key>
-				<real>0.80000001192092896</real>
+				<real>0.99997437000274658</real>
 				<key>Red Component</key>
-				<real>0.80000001192092896</real>
+				<real>1</real>
 			</dict>
 			<key>Character Encoding</key>
 			<integer>4</integer>
@@ -9612,20 +9612,20 @@
 			<key>Cursor Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.80000001192092896</real>
+				<real>0.99999129772186279</real>
 				<key>Green Component</key>
-				<real>0.80000001192092896</real>
+				<real>0.99997437000274658</real>
 				<key>Red Component</key>
-				<real>0.80000001192092896</real>
+				<real>1</real>
 			</dict>
 			<key>Cursor Text Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.17647059261798859</real>
+				<real>0.55686277151107788</real>
 				<key>Green Component</key>
-				<real>0.17647059261798859</real>
+				<real>0.24705882370471954</real>
 				<key>Red Component</key>
-				<real>0.17647059261798859</real>
+				<real>0.0</real>
 			</dict>
 			<key>Cursor Type</key>
 			<integer>0</integer>
@@ -9646,11 +9646,11 @@
 			<key>Foreground Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.80000001192092896</real>
+				<real>0.99999129772186279</real>
 				<key>Green Component</key>
-				<real>0.80000001192092896</real>
+				<real>0.99997437000274658</real>
 				<key>Red Component</key>
-				<real>0.80000001192092896</real>
+				<real>1</real>
 			</dict>
 			<key>Guid</key>
 			<string>6DE05245-ABC6-4133-86ED-9837935D9C3A</string>
@@ -10006,20 +10006,20 @@
 			<key>Selected Text Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.80000001192092896</real>
+				<real>0.99999129772186279</real>
 				<key>Green Component</key>
-				<real>0.80000001192092896</real>
+				<real>0.99997437000274658</real>
 				<key>Red Component</key>
-				<real>0.80000001192092896</real>
+				<real>1</real>
 			</dict>
 			<key>Selection Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.31764706969261169</real>
+				<real>0.55686277151107788</real>
 				<key>Green Component</key>
-				<real>0.31764706969261169</real>
+				<real>0.24705882370471954</real>
 				<key>Red Component</key>
-				<real>0.31764706969261169</real>
+				<real>0.0</real>
 			</dict>
 			<key>Semantic History</key>
 			<dict>
@@ -10898,7 +10898,7 @@
 	<key>NoSyncTimeOfLastPromo</key>
 	<real>454180854.50632799</real>
 	<key>NoSyncTimeOfLastPromoDownload</key>
-	<real>463818772.73806298</real>
+	<real>467032085.01327801</real>
 	<key>OnlyWhenMoreTabs</key>
 	<false/>
 	<key>OpenArrangementAtStartup</key>
@@ -10961,11 +10961,11 @@
 	<key>SUEnableAutomaticChecks</key>
 	<true/>
 	<key>SUFeedURL</key>
-	<string>http://iterm2.com/appcasts/testing.xml</string>
+	<string>https://iterm2.com/appcasts/testing.xml</string>
 	<key>SUHasLaunchedBefore</key>
 	<true/>
 	<key>SULastCheckTime</key>
-	<date>2015-09-12T14:08:31Z</date>
+	<date>2015-10-20T02:23:23Z</date>
 	<key>SavePasteHistory</key>
 	<false/>
 	<key>Show Toolbelt</key>
@@ -11020,6 +11020,6 @@
 	<key>findRegex_iTerm</key>
 	<false/>
 	<key>iTerm Version</key>
-	<string>2.1.1</string>
+	<string>2.1.4</string>
 </dict>
 </plist>
