--- a/.tmux.conf
+++ b/.tmux.conf
@@ -56,11 +56,11 @@ set-option -g status-position bottom
 
 ## 左パネルを設定する
 set -g status-left-length 40
-set -g status-left "#[fg=green]Session: #S #[fg=yellow]Window: #I #[fg=cyan]Pane: #P"
+set -g status-left "#[fg=green]Session: #S #[fg=yellow]Window: #I #[fg=cyan]Pane: #P #{prefix_highlight}"
 
 ## 右パネルを設定する
 # set -g status-right "Mem: #(used-mem) #[fg=magenta][%Y-%m-%d(%a) %H:%M]"
-set -g status-right "#[fg=magenta][Mem: #(used-mem)]"
+set -g status-right "#[fg=blue][Cpu: #{cpu_percentage}]#[fg=magenta][Mem: #(used-mem)]"
 
 # ウィンドウ名が実行中のコマンド名になるのを止める
 # setw -g automatic-rename off
@@ -136,10 +136,10 @@ bind y paste-buffer
 
 # マウス操作を有効にする
 # これを有効にすると、MacでCommand+Cなどができなくなるが、Optionを押しながら範囲選択すると、コピーできる。
-setw -g mode-mouse on
-set -g mouse-select-pane on
-set -g mouse-resize-pane on
-set -g mouse-select-window on
+# http://qiita.com/jyotti/items/70a3a8035d767f99f93d
+set-option -g mouse on
+# スクロールを無理やり有効にする
+# bind -n WheelUpPane if-shell -F -t = "#{mouse_any_flag}" "send-keys -M" "if -Ft= '#{pane_in_mode}' 'send-keys -M' 'copy-mode -e'"
 
 # UTF8 Support
 setw -g utf8 on
@@ -177,3 +177,22 @@ bind-key -t vi-copy u halfpage-up
 bind-key -t vi-copy d halfpage-down
 # unbind -t vi-copy Enter
 # bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
+
+
+#####################################
+###### for Tmux Plugin Manager ######
+#####################################
+
+# List of plugins
+set -g @plugin 'tmux-plugins/tpm'
+# set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'nhdaly/tmux-scroll-copy-mode'
+set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
+set -g @plugin 'tmux-plugins/tmux-sidebar'
+set -g @plugin 'tmux-plugins/tmux-open'
+set -g @plugin 'tmux-plugins/tmux-logging'
+set -g @plugin 'tmux-plugins/tmux-copycat'
+set -g @plugin 'tmux-plugins/tmux-cpu'
+
+# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+run '~/.tmux/plugins/tpm/tpm'
