--- a/.tmux.conf
+++ b/.tmux.conf
@@ -108,16 +108,16 @@ bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
 
-bind -n C-0 select-window -t :=0
-bind -n C-1 select-window -t :=1
-bind -n C-2 select-window -t :=2
-bind -n C-3 select-window -t :=3
-bind -n C-4 select-window -t :=4
-bind -n C-5 select-window -t :=5
-bind -n C-6 select-window -t :=6
-bind -n C-7 select-window -t :=7
-bind -n C-8 select-window -t :=8
-bind -n C-9 select-window -t :=9
+# bind -n C-0 select-window -t :=0
+# bind -n C-1 select-window -t :=1
+# bind -n C-2 select-window -t :=2
+# bind -n C-3 select-window -t :=3
+# bind -n C-4 select-window -t :=4
+# bind -n C-5 select-window -t :=5
+# bind -n C-6 select-window -t :=6
+# bind -n C-7 select-window -t :=7
+# bind -n C-8 select-window -t :=8
+# bind -n C-9 select-window -t :=9
 
 # Vimのキーバインドでペインをリサイズする
 bind -r H resize-pane -L 5
