--- a/mac/com.googlecode.iterm2.plist
+++ b/mac/com.googlecode.iterm2.plist
@@ -9424,146 +9424,146 @@
 			<key>Ansi 0 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.10051459074020386</real>
+				<real>0.24313725531101227</real>
 				<key>Green Component</key>
-				<real>0.10051288455724716</real>
+				<real>0.24313725531101227</real>
 				<key>Red Component</key>
-				<real>0.10051589459180832</real>
+				<real>0.24313725531101227</real>
 			</dict>
 			<key>Ansi 1 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.3728577196598053</real>
+				<real>0.086274512112140656</real>
 				<key>Green Component</key>
-				<real>0.0</real>
+				<real>0.043137256056070328</real>
 				<key>Red Component</key>
-				<real>0.95683503150939941</real>
+				<real>0.59215688705444336</real>
 			</dict>
 			<key>Ansi 10 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.14004382491111755</real>
+				<real>0.63529413938522339</real>
 				<key>Green Component</key>
-				<real>0.87921047210693359</real>
+				<real>0.83529412746429443</real>
 				<key>Red Component</key>
-				<real>0.59473341703414917</real>
+				<real>0.52941179275512695</real>
 			</dict>
 			<key>Ansi 11 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.38154411315917969</real>
+				<real>0.027450980618596077</real>
 				<key>Green Component</key>
-				<real>0.83635991811752319</real>
+				<real>0.81568628549575806</real>
 				<key>Red Component</key>
-				<real>0.87748134136199951</real>
+				<real>0.94509804248809814</real>
 			</dict>
 			<key>Ansi 12 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.99877572059631348</real>
+				<real>0.729411780834198</real>
 				<key>Green Component</key>
-				<real>0.39599207043647766</real>
+				<real>0.42352941632270813</real>
 				<key>Red Component</key>
-				<real>0.61468899250030518</real>
+				<real>0.18039216101169586</real>
 			</dict>
 			<key>Ansi 13 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.3728577196598053</real>
+				<real>0.62352943420410156</real>
 				<key>Green Component</key>
-				<real>0.0</real>
+				<real>0.63529413938522339</real>
 				<key>Red Component</key>
-				<real>0.95683503150939941</real>
+				<real>1</real>
 			</dict>
 			<key>Ansi 14 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.92060363292694092</real>
+				<real>0.99607843160629272</real>
 				<key>Green Component</key>
-				<real>0.81977206468582153</real>
+				<real>0.98039215803146362</real>
 				<key>Red Component</key>
-				<real>0.34416967630386353</real>
+				<real>0.10980392247438431</real>
 			</dict>
 			<key>Ansi 15 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.9359474778175354</real>
+				<real>1</real>
 				<key>Green Component</key>
-				<real>0.96549534797668457</real>
+				<real>1</real>
 				<key>Red Component</key>
-				<real>0.96537256240844727</real>
+				<real>1</real>
 			</dict>
 			<key>Ansi 2 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.14004382491111755</real>
+				<real>0.16470588743686676</real>
 				<key>Green Component</key>
-				<real>0.87921047210693359</real>
+				<real>0.58823531866073608</real>
 				<key>Red Component</key>
-				<real>0.59473341703414917</real>
+				<real>0.027450980618596077</real>
 			</dict>
 			<key>Ansi 3 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.099807053804397583</real>
+				<real>0.78039216995239258</real>
 				<key>Green Component</key>
-				<real>0.51805692911148071</real>
+				<real>0.93333333730697632</real>
 				<key>Red Component</key>
-				<real>0.98094809055328369</real>
+				<real>0.97254902124404907</real>
 			</dict>
 			<key>Ansi 4 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.99877572059631348</real>
+				<real>0.54117649793624878</real>
 				<key>Green Component</key>
-				<real>0.39599207043647766</real>
+				<real>0.24313725531101227</real>
 				<key>Red Component</key>
-				<real>0.61468899250030518</real>
+				<real>0.0</real>
 			</dict>
 			<key>Ansi 5 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.3728577196598053</real>
+				<real>0.56862747669219971</real>
 				<key>Green Component</key>
-				<real>0.0</real>
+				<real>0.27450981736183167</real>
 				<key>Red Component</key>
-				<real>0.95683503150939941</real>
+				<real>0.91372549533843994</real>
 			</dict>
 			<key>Ansi 6 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.92060363292694092</real>
+				<real>0.92549020051956177</real>
 				<key>Green Component</key>
-				<real>0.81977206468582153</real>
+				<real>0.81960785388946533</real>
 				<key>Red Component</key>
-				<real>0.34416967630386353</real>
+				<real>0.5372549295425415</real>
 			</dict>
 			<key>Ansi 7 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.70993047952651978</real>
+				<real>1</real>
 				<key>Green Component</key>
-				<real>0.77144092321395874</real>
+				<real>1</real>
 				<key>Red Component</key>
-				<real>0.76960963010787964</real>
+				<real>1</real>
 			</dict>
 			<key>Ansi 8 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.29652142524719238</real>
+				<real>0.40000000596046448</real>
 				<key>Green Component</key>
-				<real>0.36959609389305115</real>
+				<real>0.40000000596046448</real>
 				<key>Red Component</key>
-				<real>0.3829454779624939</real>
+				<real>0.40000000596046448</real>
 			</dict>
 			<key>Ansi 9 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.3728577196598053</real>
+				<real>0.0</real>
 				<key>Green Component</key>
 				<real>0.0</real>
 				<key>Red Component</key>
-				<real>0.95683503150939941</real>
+				<real>0.87058824300765991</real>
 			</dict>
 			<key>Automatically Log</key>
 			<false/>
@@ -9572,11 +9572,11 @@
 			<key>Background Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.10051459074020386</real>
+				<real>0.95686274766921997</real>
 				<key>Green Component</key>
-				<real>0.10051288455724716</real>
+				<real>0.95686274766921997</real>
 				<key>Red Component</key>
-				<real>0.10051589459180832</real>
+				<real>0.95686274766921997</real>
 			</dict>
 			<key>Background Image Is Tiled</key>
 			<false/>
@@ -9595,11 +9595,11 @@
 			<key>Bold Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.70993047952651978</real>
+				<real>0.0</real>
 				<key>Green Component</key>
-				<real>0.77144092321395874</real>
+				<real>0.3333333432674408</real>
 				<key>Red Component</key>
-				<real>0.76960963010787964</real>
+				<real>0.78823530673980713</real>
 			</dict>
 			<key>Character Encoding</key>
 			<integer>4</integer>
@@ -9612,20 +9612,20 @@
 			<key>Cursor Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.92647796869277954</real>
+				<real>0.24705882370471954</real>
 				<key>Green Component</key>
-				<real>0.96674919128417969</real>
+				<real>0.24705882370471954</real>
 				<key>Red Component</key>
-				<real>0.96554505825042725</real>
+				<real>0.24705882370471954</real>
 			</dict>
 			<key>Cursor Text Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.70993047952651978</real>
+				<real>0.95686274766921997</real>
 				<key>Green Component</key>
-				<real>0.77144092321395874</real>
+				<real>0.95686274766921997</real>
 				<key>Red Component</key>
-				<real>0.76960963010787964</real>
+				<real>0.95686274766921997</real>
 			</dict>
 			<key>Cursor Type</key>
 			<integer>0</integer>
@@ -9646,11 +9646,11 @@
 			<key>Foreground Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.70993047952651978</real>
+				<real>0.24313725531101227</real>
 				<key>Green Component</key>
-				<real>0.77144092321395874</real>
+				<real>0.24313725531101227</real>
 				<key>Red Component</key>
-				<real>0.76960963010787964</real>
+				<real>0.24313725531101227</real>
 			</dict>
 			<key>Guid</key>
 			<string>6DE05245-ABC6-4133-86ED-9837935D9C3A</string>
@@ -10006,20 +10006,20 @@
 			<key>Selected Text Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.70993047952651978</real>
+				<real>0.32549020648002625</real>
 				<key>Green Component</key>
-				<real>0.77144092321395874</real>
+				<real>0.32549020648002625</real>
 				<key>Red Component</key>
-				<real>0.76960963010787964</real>
+				<real>0.32549020648002625</real>
 			</dict>
 			<key>Selection Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.20521116256713867</real>
+				<real>0.88627451658248901</real>
 				<key>Green Component</key>
-				<real>0.20520767569541931</real>
+				<real>0.75686275959014893</real>
 				<key>Red Component</key>
-				<real>0.20521381497383118</real>
+				<real>0.66274511814117432</real>
 			</dict>
 			<key>Semantic History</key>
 			<dict>
@@ -10898,7 +10898,7 @@
 	<key>NoSyncTimeOfLastPromo</key>
 	<real>454180854.50632799</real>
 	<key>NoSyncTimeOfLastPromoDownload</key>
-	<real>469966798.409024</real>
+	<real>473425024.52259099</real>
 	<key>OnlyWhenMoreTabs</key>
 	<false/>
 	<key>OpenArrangementAtStartup</key>
@@ -10965,7 +10965,7 @@
 	<key>SUHasLaunchedBefore</key>
 	<true/>
 	<key>SULastCheckTime</key>
-	<date>2015-11-24T14:28:11Z</date>
+	<date>2016-01-03T06:11:33Z</date>
 	<key>SavePasteHistory</key>
 	<false/>
 	<key>Show Toolbelt</key>
