--- a/.tmux.conf
+++ b/.tmux.conf
@@ -34,6 +34,16 @@ setw -g window-status-current-fg white
 setw -g window-status-current-bg red
 setw -g window-status-current-attr bright
 
+# 最後に選択したウィンドウの色
+setw -g window-status-last-fg blue
+setw -g window-status-last-bg default
+setw -g window-status-last-attr bright
+
+# set-window-option -g window-status-alert-bg black
+# set-window-option -g window-status-alert-fg yellow
+
+set-window-option -g window-status-activity-style "fg=#8ae234,bg=default"
+
 # ペインボーダーの色を設定する
 set -g pane-border-bg white
 set -g pane-border-fg black
@@ -41,9 +51,21 @@ set -g pane-border-fg black
 set -g pane-active-border-fg red
 set -g pane-active-border-bg black
 
+#set inactive/active window styles
+# http://stackoverflow.com/questions/25532773/change-background-color-of-active-or-inactive-pane-in-tmux
+set -g window-active-style 'fg=colour250,bg=#000033'
+set -g window-style 'fg=colour247,bg=#333333'
+# set -g window-style 'fg=colour250,bg=colour236'
+# set -g window-active-style 'fg=colour250,bg=colour236,dim'
+# set -g window-active-style 'fg=colour251,bg=default'
+
+# Copy mode colors
+set-window-option -g mode-fg colour3
+set-window-option -g mode-bg colour0
+
 # コマンドラインの色を設定する
 set -g message-fg white
-set -g message-bg black
+set -g message-bg blue
 set -g message-attr bright
 
 # pane number display
@@ -188,6 +210,11 @@ bind-key -t vi-copy u halfpage-up
 bind-key -t vi-copy d halfpage-down
 # unbind -t vi-copy Enter
 # bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
+
+# C-vで矩形選択の切り替え
+bind -t vi-copy C-v rectangle-toggle
+# Yで1行ヤンク
+bind -t vi-copy Y copy-line
 
 
 #####################################
