--- a/gitfiles/.gitconfig
+++ b/gitfiles/.gitconfig
@@ -119,6 +119,7 @@
 	; editor = mvim
 	editor = vim
 	quotepath = false
+	ignorecase = false
 	; http://qiita.com/yaotti/items/2361768b6ed781e87780
 [interactive]
 # git add/checkout -p時に，エンターでの決定を省略する
@@ -133,7 +134,7 @@
     cmd = mvim -f -d \"$LOCAL\" \"$REMOTE\"
 [difftool "sourcetree"]
 	cmd = opendiff \"$LOCAL\" \"$REMOTE\"
-	path =
+	path = 
 [merge]
 	; tool = vimdiff2
 	tool = mvimdiff
